* bignum.c (rb_big_float_cmp): compare an integer and float precisely.   [ruby-core:31376] [Bug #3589] reported by Tomasz Wegrzanowski.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@36404 b2dd03c8-39d4-4d8f-98ff-823fe69b080e